crates/snapshot-tests/tests/snapshots/parser__bad_keys__cr.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ cr:1:2
  │
1 │ ""|=3
  │   invalid character '\r' in string


error: invalid character in string: `\r`
 --> cr:1:2
  |
1 | "␍"|=3
  |  ^ invalid character '\r' in string
Error {
    kind: "InvalidCharInString",
    message: "invalid character in string: `\\r`",
    span: 1..2,
    path: None,
}
